--- a/blockchain/VM/Docker/Dockerfile
+++ b/blockchain/VM/Docker/Dockerfile
@@ -1,5 +1,6 @@
 ARG PYTHON_VERSION=3.9
 FROM python:${PYTHON_VERSION}-slim
 ENV PYTHONUNBUFFERED=1
+ENV PYTHONPATH=/app/contract
 WORKDIR /app
 COPY . .
